[package]
name = "libgleam"
version = "0.1.0"
build = "build.rs"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2018"

[dependencies]
gleam = "0.6.17"
boxer = { git = "https://github.com/feenkcom/gtoolkit-boxer" }

[build-dependencies]
gl_generator = "0.14"

[lib]
name = "Gleam"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3